33 java8 (#35)
* Refactor syntax to java8

* Make ap source code Java8 compatible

* Setup CI for Java8