@@ -18,8 +18,8 @@ import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.Modifier;
-import javax.lang.model.element.RecordComponentElement;
 import javax.lang.model.element.TypeElement;
+import javax.lang.model.element.TypeParameterElement;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.TypeMirror;
@@ -28,6 +28,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 final class ClassTypeDefParser implements TypeDefParser {
@@ -43,9 +44,9 @@ final class ClassTypeDefParser implements TypeDefParser {
 
     @Override
     public TypeDef parse(TypeElement typeElement) {
-        var config = new Config(typeElement);
+        Config config = new Config(typeElement);
 
-        var builder = ClassDef.builder().qualifiedName(config.getQualifiedName()).simpleName(config.getName());
+        ClassDef.ClassDefBuilder builder = ClassDef.builder().qualifiedName(config.getQualifiedName()).simpleName(config.getName());
         builder.typeVariables(parseTypeVariables(typeElement));
         builder.components(parseComponents(typeElement, config));
         builder.supertypes(parseSupertypes(typeElement));
@@ -54,22 +55,23 @@ final class ClassTypeDefParser implements TypeDefParser {
     }
 
     private List<TypeVariableInfo> parseTypeVariables(TypeElement typeElement) {
-        var typeParameters = typeElement.getTypeParameters();
+        List<? extends TypeParameterElement> typeParameters = typeElement.getTypeParameters();
         return typeParameters.stream()
             .map(typeParameterElement -> TypeVariableInfo.builder().name(typeParameterElement.getSimpleName().toString()).build())
-            .toList(); // TODO: type bounds
+            .collect(Collectors.toList()); // TODO: type bounds
     }
 
     private List<TypeInfo> parseSupertypes(TypeElement typeElement) {
-        var supertypeElems = new ArrayList<TypeElement>();
-        var superclass = typeElement.getSuperclass();
-        if (superclass instanceof DeclaredType declaredType) {
+        List<TypeElement> supertypeElems = new ArrayList<>();
+        TypeMirror superclass = typeElement.getSuperclass();
+        if (superclass instanceof DeclaredType) {
+            DeclaredType declaredType = (DeclaredType) superclass;
             supertypeElems.add((TypeElement) declaredType.asElement());
         }
 
-        var interfaceTypes = typeElement.getInterfaces();
+        List<? extends TypeMirror> interfaceTypes = typeElement.getInterfaces();
         for (TypeMirror interfaceType : interfaceTypes) {
-            var declaredType = (DeclaredType) interfaceType;
+            DeclaredType declaredType = (DeclaredType) interfaceType;
             supertypeElems.add((TypeElement) declaredType.asElement());
         }
 
@@ -83,12 +85,12 @@ final class ClassTypeDefParser implements TypeDefParser {
     }
 
     private List<FieldComponentInfo> parseComponents(TypeElement typeElement, Config config) {
-        var componentElems = resolveComponents(typeElement, config);
+        List<Tuple<Element, String>> componentElems = resolveComponents(typeElement, config);
 
-        var fields = new ArrayList<FieldComponentInfo>(componentElems.size());
-        for (var tuple : componentElems) {
-            var element = tuple.a();
-            var fieldInfo = FieldComponentInfo.builder()
+        List<FieldComponentInfo> fields = new ArrayList<>(componentElems.size());
+        for (Tuple<Element, String> tuple : componentElems) {
+            Element element = tuple.a();
+            FieldComponentInfo fieldInfo = FieldComponentInfo.builder()
                 .name(tuple.b())
                 .modifiers(element.getModifiers())
                 .optional(element.getAnnotation(ctx.getProps().getOptionalAnno()) != null)
@@ -101,46 +103,53 @@ final class ClassTypeDefParser implements TypeDefParser {
 
     @VisibleForTesting
     List<Tuple<Element, String>> resolveComponents(TypeElement typeElement, Config config) {
-        var isRecord = typeElement.getKind() == ElementKind.RECORD;
-        var enclosedElements = typeElement.getEnclosedElements();
-        var recordAccessors = typeElement.getRecordComponents().stream().map(RecordComponentElement::getAccessor).collect(Collectors.toUnmodifiableSet());
+        List<? extends Element> enclosedElements = typeElement.getEnclosedElements();
+        List<Tuple<Element, String>> res = new ArrayList<>(enclosedElements.size());
+        NamesOfTypes uniqueNamesOfTypes = new NamesOfTypes(enclosedElements.size());
+        boolean includeAccessors = config.includes(SharedType.ComponentType.ACCESSORS);
+        boolean includeFields = config.includes(SharedType.ComponentType.FIELDS);
 
-        var res = new ArrayList<Tuple<Element, String>>(enclosedElements.size());
-        var namesOfTypes = new NamesOfTypes(enclosedElements.size());
-        var includeAccessors = config.includes(SharedType.ComponentType.ACCESSORS);
-        var includeFields = config.includes(SharedType.ComponentType.FIELDS) && !(isRecord && includeAccessors);
+        Set<String> instanceFieldNames = enclosedElements.stream()
+            .filter(e -> e.getKind() == ElementKind.FIELD && !e.getModifiers().contains(Modifier.STATIC))
+            .map(e -> e.getSimpleName().toString())
+            .collect(Collectors.toSet());
 
         for (Element enclosedElement : enclosedElements) {
             if (config.isComponentIgnored(enclosedElement)) {
                 continue;
             }
 
-            var type = enclosedElement.asType();
-            var name = enclosedElement.getSimpleName().toString();
+            TypeMirror type = enclosedElement.asType();
+            String name = enclosedElement.getSimpleName().toString();
 
-            if (includeFields && enclosedElement.getKind() == ElementKind.FIELD && enclosedElement instanceof VariableElement variableElem) {
-                if (namesOfTypes.contains(name, type)) {
+            if (includeFields && enclosedElement.getKind() == ElementKind.FIELD && enclosedElement instanceof VariableElement) {
+                VariableElement variableElem = (VariableElement) enclosedElement;
+                if (uniqueNamesOfTypes.contains(name, type) || !instanceFieldNames.contains(name)) {
                     continue;
                 }
                 res.add(Tuple.of(variableElem, name));
-                namesOfTypes.add(name, type);
+                uniqueNamesOfTypes.add(name, type);
             }
 
-            if (includeAccessors && enclosedElement instanceof ExecutableElement methodElem && isZeroArgNonstaticMethod(methodElem)) {
+            if (includeAccessors && enclosedElement instanceof ExecutableElement) {
+                ExecutableElement methodElem = (ExecutableElement) enclosedElement;
                 boolean explicitAccessor = methodElem.getAnnotation(SharedType.Accessor.class) != null;
-                if (!explicitAccessor && isRecord && !recordAccessors.contains(methodElem)) {
+                if (!isZeroArgNonstaticMethod(methodElem)) {
+                    if (explicitAccessor) {
+                        ctx.warning("Method '%s' annotated with @SharedType.Accessor is not a zero-arg nonstatic method.", methodElem);
+                    }
                     continue;
                 }
-                var baseName = getAccessorBaseName(name, isRecord);
+                String baseName = getAccessorBaseName(name, instanceFieldNames.contains(name), explicitAccessor);
                 if (baseName == null) {
                     continue;
                 }
-                var returnType = methodElem.getReturnType();
-                if (namesOfTypes.contains(baseName, returnType)) {
+                TypeMirror returnType = methodElem.getReturnType();
+                if (uniqueNamesOfTypes.contains(baseName, returnType)) {
                     continue;
                 }
                 res.add(Tuple.of(methodElem, baseName));
-                namesOfTypes.add(baseName, returnType);
+                uniqueNamesOfTypes.add(baseName, returnType);
             }
 
             // TODO: CONSTANTS
@@ -157,13 +166,16 @@ final class ClassTypeDefParser implements TypeDefParser {
     }
 
     @Nullable
-    private String getAccessorBaseName(String name, boolean isRecord) {
+    private String getAccessorBaseName(String name, boolean isFluentGetter, boolean isExplicitAccessor) {
+        if (isFluentGetter) {
+            return name;
+        }
         for (String accessorGetterPrefix : ctx.getProps().getAccessorGetterPrefixes()) {
             if (name.startsWith(accessorGetterPrefix)) {
                 return Utils.substringAndUncapitalize(name, accessorGetterPrefix.length());
             }
         }
-        if (isRecord) {
+        if (isExplicitAccessor) {
             return name;
         }
         return null;
@@ -177,7 +189,7 @@ final class ClassTypeDefParser implements TypeDefParser {
         }
 
         boolean contains(String name, TypeMirror componentType) {
-            var type = namesOfTypes.get(name);
+            TypeMirror type = namesOfTypes.get(name);
             if (type == null) {
                 return false;
             }
