@@ -4,6 +4,7 @@ import com.sun.source.tree.ExpressionTree;
 import com.sun.source.tree.NewClassTree;
 
 import java.util.Arrays;
+import java.util.stream.Collectors;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -15,7 +16,7 @@ public final class NewClassTreeMock extends AbstractTreeMock<NewClassTree, NewCl
 
     @SafeVarargs
     public final <T extends ExpressionTree, M extends AbstractTreeMock<T, M>> NewClassTreeMock withArguments(ExpressionTreeMock<T, M>... arguments) {
-        when(tree.getArguments()).then(invoc -> Arrays.stream(arguments).map(arg -> arg.tree).toList());
+        when(tree.getArguments()).then(invoc -> Arrays.stream(arguments).map(arg -> arg.tree).collect(Collectors.toList()));
         return this;
     }
 }
