@@ -6,12 +6,16 @@ import org.sharedtype.domain.ConcreteTypeInfo;
 import org.sharedtype.domain.EnumDef;
 import org.sharedtype.domain.EnumValueInfo;
 import org.sharedtype.domain.FieldComponentInfo;
+import org.sharedtype.domain.TypeDef;
+import org.sharedtype.domain.TypeInfo;
 import org.sharedtype.domain.TypeVariableInfo;
 import org.junit.jupiter.api.Test;
 import org.sharedtype.processor.context.ContextMocks;
 import org.sharedtype.processor.parser.TypeDefParser;
 
 import javax.lang.model.element.TypeElement;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -26,18 +30,18 @@ final class LoopTypeResolverTest {
 
     @Test
     void resolveFullClass() {
-        var aTypeInfo = ConcreteTypeInfo.builder()
+        TypeInfo aTypeInfo = ConcreteTypeInfo.builder()
             .qualifiedName("com.github.cuzfrog.A")
             .resolved(false)
             .build();
-        var typeDef = ClassDef.builder()
+        TypeDef typeDef = ClassDef.builder()
             .qualifiedName("com.github.cuzfrog.Abc").simpleName("Abc")
-            .components(List.of(
+            .components(Collections.singletonList(
                 FieldComponentInfo.builder().name("tuple").type(
                     ConcreteTypeInfo.builder()
                         .qualifiedName("com.github.cuzfrog.Tuple")
                         .resolved(false)
-                        .typeArgs(List.of(
+                        .typeArgs(Arrays.asList(
                             aTypeInfo,
                             new ArrayTypeInfo(ConcreteTypeInfo.builder()
                                 .qualifiedName("com.github.cuzfrog.B")
@@ -47,10 +51,10 @@ final class LoopTypeResolverTest {
                         .build()
                 ).build()
             ))
-            .typeVariables(List.of(
+            .typeVariables(Collections.singletonList(
                 TypeVariableInfo.builder().name("T").build()
             ))
-            .supertypes(List.of(
+            .supertypes(Collections.singletonList(
                 ConcreteTypeInfo.builder()
                     .qualifiedName("com.github.cuzfrog.SuperClassA")
                     .resolved(false)
@@ -58,36 +62,36 @@ final class LoopTypeResolverTest {
             ))
             .build();
 
-        var tupleDef = ClassDef.builder().qualifiedName("com.github.cuzfrog.Tuple").simpleName("Tuple").build();
+        ClassDef tupleDef = ClassDef.builder().qualifiedName("com.github.cuzfrog.Tuple").simpleName("Tuple").build();
         when(typeDefParser.parse(mockElementByName("com.github.cuzfrog.Tuple"))).thenReturn(tupleDef);
-        var aDef = ClassDef.builder().qualifiedName("com.github.cuzfrog.A").simpleName("A").build();
+        ClassDef aDef = ClassDef.builder().qualifiedName("com.github.cuzfrog.A").simpleName("A").build();
         when(typeDefParser.parse(mockElementByName("com.github.cuzfrog.A"))).thenReturn(aDef);
-        var bDef = ClassDef.builder().qualifiedName("com.github.cuzfrog.B").simpleName("B").build();
+        ClassDef bDef = ClassDef.builder().qualifiedName("com.github.cuzfrog.B").simpleName("B").build();
         when(typeDefParser.parse(mockElementByName("com.github.cuzfrog.B"))).thenReturn(bDef);
-        var superADef = ClassDef.builder()
+        ClassDef superADef = ClassDef.builder()
             .qualifiedName("com.github.cuzfrog.SuperClassA").simpleName("SuperClassA")
-            .components(List.of(
+            .components(Collections.singletonList(
                 FieldComponentInfo.builder().name("a").type(aTypeInfo).build()
             ))
             .build();
         when(typeDefParser.parse(mockElementByName("com.github.cuzfrog.SuperClassA"))).thenReturn(superADef);
 
-        var defs = resolver.resolve(List.of(typeDef));
+        List<TypeDef> defs = resolver.resolve(Collections.singletonList(typeDef));
         assertThat(defs).hasSize(5);
         {
-            var a = (ClassDef) defs.get(0);
+            ClassDef a = (ClassDef) defs.get(0);
             assertThat(a).isSameAs(aDef);
         }
         {
-            var b = (ClassDef) defs.get(1);
+            ClassDef b = (ClassDef) defs.get(1);
             assertThat(b).isSameAs(bDef);
         }
         {
-            var tuple = (ClassDef) defs.get(2);
+            ClassDef tuple = (ClassDef) defs.get(2);
             assertThat(tuple).isSameAs(tupleDef);
         }
         {
-            var superclassA = (ClassDef) defs.get(3);
+            ClassDef superclassA = (ClassDef) defs.get(3);
             assertThat(superclassA.qualifiedName()).isEqualTo("com.github.cuzfrog.SuperClassA");
             assertThat(superclassA.simpleName()).isEqualTo("SuperClassA");
             assertThat(superclassA.components()).hasSize(1);
@@ -98,7 +102,7 @@ final class LoopTypeResolverTest {
             assertThat(fieldType.qualifiedName()).isEqualTo("com.github.cuzfrog.A");
         }
         {
-            var abc = (ClassDef) defs.get(4);
+            ClassDef abc = (ClassDef) defs.get(4);
             assertThat(abc).isSameAs(typeDef);
             FieldComponentInfo field = abc.components().get(0);
             assertThat(field.resolved()).isTrue();
@@ -122,22 +126,22 @@ final class LoopTypeResolverTest {
 
     @Test
     void resolveSimpleEnum() {
-        var typeDef = EnumDef.builder()
+        EnumDef typeDef = EnumDef.builder()
             .qualifiedName("com.github.cuzfrog.EnumA").simpleName("EnumA")
-            .enumValueInfos(List.of(
+            .enumValueInfos(Arrays.asList(
                 new EnumValueInfo(STRING_TYPE_INFO, "Value1"),
                 new EnumValueInfo(STRING_TYPE_INFO, "Value2")
             ))
             .build();
 
-        var defs = resolver.resolve(List.of(typeDef));
+        List<TypeDef> defs = resolver.resolve(Collections.singletonList(typeDef));
         assertThat(defs).hasSize(1);
-        var enumA = (EnumDef) defs.get(0);
+        EnumDef enumA = (EnumDef) defs.get(0);
         assertThat(enumA).isSameAs(typeDef);
     }
 
     private TypeElement mockElementByName(String qualifiedName) {
-        var typeElement = ctxMocks.typeElement(qualifiedName).element();
+        TypeElement typeElement = ctxMocks.typeElement(qualifiedName).element();
         when(ctxMocks.getElements().getTypeElement(qualifiedName)).thenReturn(typeElement);
         return typeElement;
     }
